
[package]
name = "estrogen"
description = "A proc macro library for compile time string generation."
authors = ["Ada F. <https://github.com/ErisianArchitect>"]
repository = "https://github.com/ErisianArchitect/estrogen"
documentation = "https://docs.rs/estrogen"
license-file = "LICENSE"
# TODO: Patch version bump (updated dependency)
publish = true
version = "0.1.1-indev"
edition = "2024"

[lib]
crate-type = ["proc-macro"]

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
regex = "1.12.3"
syn = { version = "2.0.117", features = ["full"] }
uranus = "0.1.1"
